--- a/base/raw-app/deployment.yaml
+++ b/base/raw-app/deployment.yaml
@@ -46,12 +46,12 @@ spec:
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
-          containerPort: 8080
+          containerPort: 80
           protocol: TCP
         livenessProbe:
           httpGet:
             path: /
-            port: http
+            port: 80
           initialDelaySeconds: 10
           periodSeconds: 10
         readinessProbe:
